# agnocast

./: .gitignore  README.md
.github/: pull_request_template.md
.github/kunit/: Kbuild  kunitconfig
.github/workflows/: auto-assign.yaml  build-and-test-agnocast-daemon.yaml  build-and-test-agnocastlib-components-heaphook.yaml  build-kmod.yaml  checkpatch.yaml  kunit.yaml  run-pre-commit.yaml  sparse-check.yaml
agnocast_daemon/: CMakeLists.txt  Makefile  command_handlers.cpp  command_handlers.hpp  main.cpp  memory_allocator.cpp  memory_allocator.hpp  message_entry.hpp  metadata_store.cpp  metadata_store.hpp  protocol.h  socket_server.cpp  socket_server.hpp
agnocast_daemon/test/: daemon_test_util.hpp  test_init_memory_allocator.cpp  test_ioctl_bridge_and_info.cpp  test_ioctl_core.cpp
agnocast_heaphook/: Cargo.toml
agnocast_heaphook/debian/: changelog  control  rules
agnocast_kmod/: agnocast.h  agnocast_exit.c  agnocast_internal.c  agnocast_internal.h  agnocast_ioctl.c  agnocast_kunit_main.c  dkms.conf
agnocast_kmod/agnocast_kunit/: Makefile.inc  agnocast_kunit_add_process.c  agnocast_kunit_add_process.h  agnocast_kunit_add_subscriber.c  agnocast_kunit_add_subscriber.h  agnocast_kunit_bridge_shutdown.c  agnocast_kunit_check_and_request_bridge_shutdown.c  agnocast_kunit_check_and_request_bridge_shutdown.h  agnocast_kunit_do_exit.c  agnocast_kunit_domain_bridge.c  agnocast_kunit_domain_bridge.h  agnocast_kunit_get_node_publisher_topics.c  agnocast_kunit_get_node_subscriber_topics.c  agnocast_kunit_get_publisher_num.c  agnocast_kunit_get_publisher_qos.c  agnocast_kunit_get_subscriber_num.c  agnocast_kunit_get_subscriber_qos.c  agnocast_kunit_get_topic_publisher_info.c  agnocast_kunit_get_topic_publisher_info.h  agnocast_kunit_get_topic_subscriber_info.c  agnocast_kunit_get_topic_subscriber_info.h  agnocast_kunit_publish_msg.c  agnocast_kunit_receive_msg.c  agnocast_kunit_release_sub_ref.c  agnocast_kunit_remove_publisher.c  agnocast_kunit_remove_subscriber.c  agnocast_kunit_set_ros2_publisher_num.c  agnocast_kunit_set_ros2_subscriber_num.c  agnocast_kunit_take_msg.c
agnocast_kmod/debian/: changelog  control  postinst  prerm  rules
docs/: agnocast_node_interface_comparison.md  agnocast_ros2_bridge.md  message_queue.md  ros2_command_extension.md
scripts/: README.md  run_daemon.bash  switch_kmod.bash
scripts/dev/: build_all_daemon.bash
scripts/lib/: agnocast_backend.bash
scripts/releases/: prepare_release_heaphook.bash  prepare_release_kmod.bash  release_heaphook.bash  release_kmod.bash
scripts/sample_application/: run_generic_listener.bash  run_generic_talker.bash
scripts/test/: e2e_test_1to1.bash  e2e_test_2to2.bash  e2e_test_cross_ns_cli.bash  e2e_test_discovery_agent.bash  e2e_test_domain_bridge.bash  e2e_test_many_exit.bash  e2e_test_stress.bash  run_daemon_unit_tests.bash  switch_kmod.bats  switch_kmod_canonical_setup.bash
src/agnocast/: CHANGELOG.rst  package.xml
src/agnocast_cie_config_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/agnocast_cie_config_msgs/srv/: ReapplyConfig.srv
src/agnocast_cie_thread_configurator/: CHANGELOG.rst  package.xml
src/agnocast_cie_thread_configurator/rust/: Cargo.toml
src/agnocast_cie_thread_configurator/rust/src/: lib.rs  wire.rs
src/agnocast_cie_thread_configurator/rust/tests/: end_to_end.rs
src/agnocast_cie_thread_configurator/src/: thread_config.cpp  thread_configurator_node.cpp
src/agnocast_cie_thread_configurator/test/: test_non_ros_thread_ipc.cpp  test_reapply_config.cpp
src/agnocast_components/: CHANGELOG.rst  package.xml
src/agnocast_e2e_test/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/agnocast_e2e_test/src/: test_publisher_component.cpp
src/agnocast_e2e_test/test/: test_1to1.py  test_2to2.py
src/agnocast_ioctl_wrapper/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/agnocast_ioctl_wrapper/src/: agnocast_ioctl.hpp  discovery_agent.cpp  domain_bridge.cpp  topic_info.cpp  topic_list.cpp
src/agnocast_sample_application/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/agnocast_sample_application/launch/: generic_listener.launch.xml  generic_talker.launch.xml
src/agnocast_sample_application/src/: minimal_client.cpp  minimal_generic_publisher.cpp  minimal_generic_subscriber.cpp  no_rclcpp_client.cpp
src/agnocast_sample_interfaces/: CHANGELOG.rst  package.xml
src/agnocastlib/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ros2agnocast/: CHANGELOG.rst  package.xml  setup.py
src/ros2agnocast_discovery_agent/: CHANGELOG.rst  package.xml  setup.py
src/ros2agnocast_discovery_msgs/: CHANGELOG.rst  package.xml
(+112 files in other folders)
