[package]
name = "agnocast_cie_thread_configurator_client"
version = "2.3.5"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
authors = ["Atsushi Yano <atsushi.yano.2@tier4.jp>"]
description = "Pure-Rust client for the cie_thread_configurator non-ROS thread notification protocol"

[dependencies]
libc = "0.2"
log = "0.4"
